# CSE-462-Art-Gallery-Problem

./: README.md  run-all.sh
Simon's iterative algorithm implementation/: CMakeLists.txt  README.md  anal.md  test_pentagon.json  test_triangle.json  testgp.json
Simon's iterative algorithm implementation/_bulk_test_out/gD-ortho-ortho/: gD_ortho-ortho_100:400v-40h_1_output.json
Simon's iterative algorithm implementation/examples/: benchmark_driver.cpp
Simon's iterative algorithm implementation/examples/polygons/: complex_polygon.json  simple_polygon.json
Simon's iterative algorithm implementation/final_output_tozoni/: gB_simple-simple_25:100v-10h_29__ALL_VERTICES__2.sol  gB_simple-simple_25:100v-10h_29__CHWA_POINTS_EXTENDED__2.sol  gB_simple-simple_25:100v-10h_29__CHWA_POINTS_EXTENDED__3.sol  gB_simple-simple_25:100v-10h_29__CHWA_POINTS__1.log.par  gB_simple-simple_25:100v-10h_29__CHWA_POINTS__2.log.par  gB_simple-simple_25:100v-10h_29__CHWA_POINTS__2.sol  gB_simple-simple_25:100v-10h_29__CHWA_POINTS__3.log.par  gB_simple-simple_25:100v-10h_29__CHWA_POINTS__3.sol  gB_simple-simple_25:100v-10h_29__CONVEX_VERTICES__2.sol  gB_simple-simple_25:100v-10h_29__CONVEX_VERTICES__3.sol  gD_ortho-ortho_20:100v-10h_23__ALL_VERTICES__1.log.par  gD_ortho-ortho_20:100v-10h_23__ALL_VERTICES__2.sol  gD_ortho-ortho_20:100v-10h_23__ALL_VERTICES__3.sol  gD_ortho-ortho_20:100v-10h_23__CHWA_POINTS_EXTENDED__1.sol  gD_ortho-ortho_20:100v-10h_23__CHWA_POINTS_EXTENDED__3.sol  gD_ortho-ortho_20:100v-10h_23__CHWA_POINTS__1.log.par  gD_ortho-ortho_20:100v-10h_23__CHWA_POINTS__1.sol  gD_ortho-ortho_20:100v-10h_23__CHWA_POINTS__2.log.par  gD_ortho-ortho_20:100v-10h_23__CHWA_POINTS__3.log.par  gD_ortho-ortho_20:100v-10h_23__CHWA_POINTS__3.sol  gD_ortho-ortho_20:100v-10h_23__CONVEX_VERTICES__1.log.par  gD_ortho-ortho_20:100v-10h_23__CONVEX_VERTICES__1.sol  gD_ortho-ortho_20:100v-10h_23__CONVEX_VERTICES__2.log.par  gD_ortho-ortho_20:100v-10h_23__CONVEX_VERTICES__2.sol  random-100-6__ALL_VERTICES__1.log.par  random-100-6__ALL_VERTICES__1.sol  random-100-6__ALL_VERTICES__3.log.par  random-100-6__ALL_VERTICES__3.sol  random-100-6__CHWA_POINTS_EXTENDED__1.log.par  random-100-6__CHWA_POINTS_EXTENDED__1.sol  random-100-6__CHWA_POINTS_EXTENDED__2.log.par  random-100-6__CHWA_POINTS_EXTENDED__2.sol  random-100-6__CHWA_POINTS_EXTENDED__3.log.par  random-100-6__CHWA_POINTS__1.sol  random-100-6__CHWA_POINTS__2.log.par  random-100-6__CONVEX_VERTICES__3.log.par  random-20-8__ALL_VERTICES__1.sol  random-20-8__ALL_VERTICES__2.sol  random-20-8__CONVEX_VERTICES__3.sol  random-200-14__ALL_VERTICES__1.sol  (+73 more)
Simon's iterative algorithm implementation/python/: app.py  requirements.txt  visualize.py
Simon's iterative algorithm implementation/scripts/: compare_results.py  run-all-2.sh  run_final_json_batch.py  visualize_agp_simulation.py
Simon's iterative algorithm implementation/src/: main.cpp
Simon's iterative algorithm implementation/tests/: test_arrangement.cpp  test_geometry.cpp  test_main.cpp  test_visibility.cpp
tozoni-2016-implementation/: CMakeLists.txt  INSTALL.txt  build.sh  modification.md  testcases.txt
tozoni-2016-implementation/art-gallery-pg/: AuxGallery.h  artGallerySolver.C  artGallerySolver.h
tozoni-2016-implementation/final_output_tozoni/: gB_simple-simple_25:100v-10h_29__ALL_VERTICES__1.log.par  gB_simple-simple_25:100v-10h_29__ALL_VERTICES__1.sol  gB_simple-simple_25:100v-10h_29__ALL_VERTICES__2.log.par  gB_simple-simple_25:100v-10h_29__ALL_VERTICES__3.log.par  gB_simple-simple_25:100v-10h_29__ALL_VERTICES__3.sol  gB_simple-simple_25:100v-10h_29__CHWA_POINTS_EXTENDED__1.log.par  gB_simple-simple_25:100v-10h_29__CHWA_POINTS_EXTENDED__1.sol  gB_simple-simple_25:100v-10h_29__CHWA_POINTS_EXTENDED__2.log.par  gB_simple-simple_25:100v-10h_29__CHWA_POINTS_EXTENDED__3.log.par  gB_simple-simple_25:100v-10h_29__CHWA_POINTS__1.sol  gB_simple-simple_25:100v-10h_29__CONVEX_VERTICES__1.log.par  gB_simple-simple_25:100v-10h_29__CONVEX_VERTICES__1.sol  gB_simple-simple_25:100v-10h_29__CONVEX_VERTICES__2.log.par  gB_simple-simple_25:100v-10h_29__CONVEX_VERTICES__3.log.par  gD_ortho-ortho_20:100v-10h_23__ALL_VERTICES__1.sol  gD_ortho-ortho_20:100v-10h_23__ALL_VERTICES__2.log.par  gD_ortho-ortho_20:100v-10h_23__ALL_VERTICES__3.log.par  gD_ortho-ortho_20:100v-10h_23__CHWA_POINTS_EXTENDED__2.sol  gD_ortho-ortho_20:100v-10h_23__CHWA_POINTS__2.sol  gD_ortho-ortho_20:100v-10h_23__CONVEX_VERTICES__3.log.par  random-100-6__ALL_VERTICES__2.log.par  random-100-6__ALL_VERTICES__2.sol  random-100-6__CHWA_POINTS_EXTENDED__3.sol  random-100-6__CHWA_POINTS__1.log.par  random-100-6__CHWA_POINTS__2.sol  random-100-6__CHWA_POINTS__3.log.par  random-100-6__CONVEX_VERTICES__1.log.par  random-100-6__CONVEX_VERTICES__2.log.par  random-100-6__CONVEX_VERTICES__2.sol  random-100-6__CONVEX_VERTICES__3.sol  random-20-8__CHWA_POINTS_EXTENDED__1.sol  random-20-8__CHWA_POINTS_EXTENDED__2.sol  random-20-8__CHWA_POINTS__1.sol  random-20-8__CONVEX_VERTICES__2.sol  random-200-14__ALL_VERTICES__1.log.par  random-200-14__ALL_VERTICES__2.sol  random-200-14__CHWA_POINTS_EXTENDED__1.log.par  random-200-14__CHWA_POINTS_EXTENDED__1.sol  random-200-14__CHWA_POINTS_EXTENDED__3.log.par  random-200-14__CHWA_POINTS_EXTENDED__3.sol  (+77 more)
tozoni-2016-implementation/grid/: AVPLightGrid.C  Arrangement.h  IGrid.h
tozoni-2016-implementation/polygon/: PolygonExt.h
tozoni-2016-implementation/pre-solver/: PreSolver.C  PreSolver.h
tozoni-2016-implementation/runs/: random-60-2_CHWA_POINTS_2.stdout.txt  random-80-23.stdout.txt  random-80-23.summary.log.par
tozoni-2016-implementation/scp-solver/: Lagrangian.C  Lagrangian.h  SolverPLIGlpk.h
tozoni-2016-implementation/scripts/: make-sample.sh  render_final_viz.sh  run-all-1.sh  run_final_batch.sh  run_trace_and_render.sh
tozoni-2016-implementation/tests/: test_arrangement_smoke.cpp
tozoni-2016-implementation/visualization/: README.txt  agp_viz_app.py  batch_render_final_output.py  charts_from_final_logs.py  pol_sol_io.py  render_trace_coverage.py  requirements.txt  run_viz.sh  step_viz_from_runlog.py
(+2354 files in other folders)
